--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ nav {
   overflow: hidden;
 }
 
+
 .navTop {
   background-color: black;
   padding: 0.85rem;
@@ -24,7 +25,7 @@ nav {
 .navTop>a {
   font-size: 1.20rem;
   font-weight: bolder;
-  color: #ffc107;
+  color: white;
   text-decoration: none;
 
 }
@@ -59,3 +60,4 @@ nav {
   background-color: rgba(0, 0, 0, 0.568);
   color: white;
 }
+
