--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ nav {
   padding-left: 3rem;
 }
 
-.navTop > a {
+.navTop>a {
   font-size: 1.20rem;
   font-weight: bolder;
   color: white;
@@ -64,3 +64,49 @@ nav {
   color: white;
 }
 
+.preorder-cover h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.navTop>.login-active {
+  margin-left: auto;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+  color: #ffc107;
+
+}
+
+.login {
+  margin-left: auto;
+  color: #f8f9fa;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: black;
+  border: solid white 1px;
+  padding: 2rem;
+  font-weight: bold;
+  background-color: gray;
+}
+
+.login-form {
+  min-height: calc(100vh - 80px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(151, 0, 0, 0.568);
+  color: white;
+  text-align: center;
+  padding: 5rem;
+  box-sizing: border-box;
+}
