--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,20 @@ nav {
   overflow: hidden;
 }
 
+.welcome-message {
+  margin-left: auto;
+}
+
+.navTop > .logout {
+  margin-left: auto;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.navTop > .logout:hover {
+  color: #adb5bd;
+}
 
 .navTop {
   background-color: black;
@@ -78,6 +92,7 @@ nav {
 
 }
 
+
 .login {
   margin-left: auto;
   color: #f8f9fa;
@@ -89,25 +104,27 @@ nav {
 .login-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.75rem;
   color: black;
-  border: solid white 1px;
   padding: 2rem;
-  background-color: gray;
+  background-color: rgb(255, 255, 255);
+  width: 30rem;
 }
 
 .login-form {
   min-height: calc(100vh - 56px);
-  width: 100%;
+  font-size: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(151, 0, 0, 0.568);
+  background-color: rgba(0, 0, 0, 0.568);
   color: white;
-  text-align: center;
   padding: 5rem;
   box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .card-group {
@@ -119,3 +136,10 @@ nav {
 .card-group .card {
   flex: 0 0 18rem;
 }
+
+.card-img-top {
+  width: 300px; 
+  height: 200px;
+  object-fit: cover;
+}
+
